fix text alignment

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -38,7 +38,3 @@ ul {
   color: white;
   padding-right: 40px;
 }
-
-#post-list {
-  text-align:left;
-}
